<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    android:scrollbars="none"
    android:soundEffectsEnabled="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/VPMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginVertical="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="0"
            android:baselineAligned="false"
            android:foregroundGravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/indicatorBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Red"
                android:maxHeight="10dp"
                android:minHeight="10dp" />

            <Button
                android:id="@+id/buttonSpecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:minWidth="50dp"
                android:text="@string/textSpecter"
                android:textAlignment="center"
                android:textColor="@color/buttonTextColor" />

            <Button
                android:id="@+id/buttonHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/textHistory"
                android:textColor="@color/buttonTextColor" />

            <Button
                android:id="@+id/buttonDosimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/textDosimetr"
                android:textColor="@color/buttonTextColor" />

            <Button
                android:id="@+id/buttonLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/textLog"
                android:textColor="@color/buttonTextColor" />

            <Button
                android:id="@+id/buttonSetup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/textSetup"
                android:textColor="@color/buttonTextColor" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/textExit"
                android:textColor="@color/buttonTextColor" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>